force-app/main/default/objects/Investment__c/fields/Investment_Type__c.field-meta.xml
<CustomField>
    <fullName>Investment_Type__c</fullName>
    <label>Investment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
            <value>
                <fullName>Public Provident Fund (PPF)</fullName>
            </value>
            <value>
                <fullName>Employee Provident Fund (EPF)</fullName>
            </value>
            <value>
                <fullName>National Pension System (NPS)</fullName>
            </value>
            <value>
                <fullName>Equity Linked Saving Scheme (ELSS)</fullName>
            </value>
            <value>
                <fullName>Life Insurance Premium</fullName>
            </value>
            <value>
                <fullName>Health Insurance Premium (Section 80D)</fullName>
            </value>
            <value>
                <fullName>Tax Saver Fixed Deposit (5 years)</fullName>
            </value>
            <value>
                <fullName>National Savings Certificate (NSC)</fullName>
            </value>
            <value>
                <fullName>Senior Citizens Savings Scheme (SCSS)</fullName>
            </value>
            <value>
                <fullName>Sukanya Samriddhi Yojana</fullName>
            </value>
            <value>
                <fullName>Home Loan Principal Repayment</fullName>
            </value>
            <value>
                <fullName>Home Loan Interest (Section 24)</fullName>
            </value>
            <value>
                <fullName>Education Loan Interest (Section 80E)</fullName>
            </value>
            <value>
                <fullName>Tuition Fees for Children</fullName>
            </value>
            <value>
                <fullName>Infrastructure Bonds</fullName>
            </value>
            <value>
                <fullName>Mutual Funds (Non-ELSS)</fullName>
            </value>
            <value>
                <fullName>Stock Market Investments</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Gold Bonds / ETFs</fullName>
            </value>
            <value>
                <fullName>Unit Linked Insurance Plan (ULIP)</fullName>
            </value>
            <value>
                <fullName>Other Section 80C Investments</fullName>
            </value>
            <value>
                <fullName>Voluntary Retirement Scheme (VRS)</fullName>
            </value>
            <value>
                <fullName>Gratuity</fullName>
            </value>
            <value>
                <fullName>Fixed Deposits (Non-Tax Saver)</fullName>
            </value>
            <value>
                <fullName>Other (Specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>