force-app/main/default/objects/Investment__c/fields/Maturity_date__c.field-meta.xml
<CustomField>
    <fullName>Maturity_date__c</fullName>
    <label>Maturity date</label>
    <type>Date</type>
</CustomField>