force-app/main/default/objects/Investment__c/fields/Section_Applicability__c.field-meta.xml
<CustomField>
    <fullName>Section_Applicability__c</fullName>
    <label>Section Applicability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ection 80C</fullName>
                <label>Section 80C</label>
            </value>
            <value>
                <fullName>Section 80D</fullName>
            </value>
            <value>
                <fullName>Section 80E</fullName>
            </value>
            <value>
                <fullName>Section 80G</fullName>
            </value>
            <value>
                <fullName>Section 80GGA</fullName>
            </value>
            <value>
                <fullName>Section 80GG</fullName>
            </value>
            <value>
                <fullName>Section 80TTA</fullName>
            </value>
            <value>
                <fullName>Section 80TTB</fullName>
            </value>
            <value>
                <fullName>Section 24(b)</fullName>
            </value>
            <value>
                <fullName>Section 54</fullName>
            </value>
            <value>
                <fullName>Section 54EC</fullName>
            </value>
            <value>
                <fullName>Section 54F</fullName>
            </value>
            <value>
                <fullName>Section 10(10D)</fullName>
            </value>
            <value>
                <fullName>Section 10(38)</fullName>
            </value>
            <value>
                <fullName>Section 80U</fullName>
            </value>
            <value>
                <fullName>Section 10(10CC)</fullName>
            </value>
            <value>
                <fullName>Section 10(12)</fullName>
            </value>
            <value>
                <fullName>Section 80CCG</fullName>
            </value>
            <value>
                <fullName>Section 10(5)</fullName>
            </value>
            <value>
                <fullName>Section 10(15)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>