force-app/main/default/objects/Investment__c/fields/Tax_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Tax_Treatment__c</fullName>
    <label>Tax Treatment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
            <value>
                <fullName>Taxable</fullName>
            </value>
            <value>
                <fullName>Exempt</fullName>
            </value>
            <value>
                <fullName>Deduction-Eligible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>