force-app/main/default/objects/Investment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Investment_Type__c</columns>
    <columns>Investment_Amount__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Maturity_date__c</columns>
    <columns>Tax_Treatment__c</columns>
    <columns>Section_Applicability__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>